@@ -15,6 +15,9 @@ basic
    linux/lock.h
       1) By default, now using  __sync_lock_test_and_set() and __sync_lock_release()
 
+   Thread classes
+      1) Fixed double thread termination.
+
 --------------------------------------------------------------------------------
 basicGL
 
